# gpu-ordering

./: .gitignore  CMakeLists.txt  README.md  patch_ids_tet_vertex_order.txt
Renders/: render_mesh.py  run_render.sh  show_separator_as_color.py  show_separator_as_point.py
Renders/Figures/: squirrel_sep_0_point.blend  squirrel_sep_1_point.blend
Renders/PatchEffect/: patch_with_separator.py  run_patch_with_separator.sh
Renders/PatchEffect/Figures/: dragon_patch_sep_13_level0.blend  dragon_patch_sep_2_level0.blend  dragon_patch_sep_40_level0.blend  dragon_patch_sep_8_level0.blend
Renders/Separator/: render_mesh.py  run_sep_color.sh  run_sep_points.sh  show_separator_as_point.py
Renders/Separator/Figures/: beetle.blend  beetle.blend1  dragon.blend  dragon.blend1
Renders/Teaser/: render_graph_from_patch.py  render_patch.py  render_separator_in_patch_graph.py  run_render_graph.sh  run_render_patch.sh  run_render_separator_graph.sh
Renders/Teaser/Figures/: beetle_graph.blend  beetle_graph.blend1  beetle_sep_graph_left.blend  beetle_sep_graph_left.blend1  beetle_sep_graph_right.blend
benchmark/: CMakeLists.txt  app_benchmark.cpp  benchmark.cpp  cudss_benchmark.cpp  ordering_benchmark.cpp
benchmark/cudss_benchmark/: cudss_benchmark.cpp
benchmark/etree_analysis/: etree_analysis.cpp  etree_analysis_utils.h
benchmark/ipc_benchmark/: ipc_benchmark.cpp  ipc_benchmark.cu  ipc_prep_benchmark.h
benchmark/module_patch_benchmark/: patch_comparison.cu
benchmark/module_patch_benchmark/utils/: create_patch_with_metis.h  read_face_and_pos.h  show_separator_per_level.h
benchmark/multiple_factorization/: CMakeLists.txt  data_smoothing.cpp  data_smoothing_benchmark.cpp  general_benchmark.cu  ipc_benchmark.cpp  mesh_smoothing_benchmark.cpp  patch_remeshing_benchmark.cpp  scp_benchmark.cpp  slim_benchmark.cpp  vector_field_smoothing.cpp
benchmark/multiple_factorization/utils/: createPatch.cpp  createPatch.h  remesh_the_patch.h  scp_prep_benchmark.h  slim_prep_benchmark.h  update_perm_with_boundary.h
benchmark/parth_patch_comparison/utils/: create_patch_with_parth.h  show_patches.h
benchmark/render_helper/: CMakeLists.txt  gen_sep_data.cpp  save_mat_and_permute_mat.cpp
benchmark/single_factorization/: CMakeLists.txt  general_benchmark.cu  laplace_benchmark.cpp  tet_mesh_laplace_benchmark.cpp  tri_mesh_laplace_benchmark.cpp
benchmark/single_factorization/test_data/: rocker-arm.mtx  rocker-arm_67_node_to_patch.txt
benchmark/single_factorization/utils/: create_patch_with_metis.h
cmake/find/: FindMKL.cmake
cmake/recipes/: libigl.cmake  openblas.cmake  parth.cmake  rxmesh.cmake  suitesparse.cmake
python_scripts/AnalysisScripts/StaticSparsityRuntime/: plot_runtime.py
python_scripts/AnalysisScripts/StaticSparsityRuntime/data/: mesh_char_data.csv
python_scripts/TaichiPatcher/: patcher.py
python_scripts/apps/: mesh_smoothing_end_to_end.py  tabel_generator.py
python_scripts/apps/data/NoiseSmoothing/: noisesmoothing.csv
python_scripts/apps/data/SCP/: scp.csv
python_scripts/apps/data/SLIM/: slim.csv
python_scripts/apps/data/Smoothing/: smoothing.csv
python_scripts/ipc_analysis/: IPC.csv  plot_factor.py
python_scripts/permutation_comparison/: comparison.py  modular_effect.py  patch_size_comparison.py  runtime_breakdown.py  separator_comparison.py
python_scripts/permutation_comparison/data/: amd_benchmark.csv  baseline.csv  laplace_full_benchmark.csv  level_effect.csv  metis_benchmark.csv  module_select.csv  parmetis_benchmark.csv  patch_amd_benchmark.csv  patch_metis_benchmark.csv  patch_size_effect.csv  tri_CUDSS_benchmark.csv  tri_mesh_patch_size_type_benchmark.csv
python_scripts/single_factorization_analysis/: eval_total_speedup.py  intro_bottleneck_analysis.py  tet_total_speedup.py
python_scripts/single_factorization_analysis/data/: ParMETIS_MKL_benchmark.csv  end_to_end.csv  laplace_full_benchmark.csv  tet_mesh_benchmark.csv
scripts/analysis/etree_analysis/: run_analysis.sh
scripts/benchmark/: .cudss_ordering_benchmark.sh.swp  cudss_ordering_benchmark.sh
scripts/benchmark/ipc_benchmark/: ipc_benchmark.sh
scripts/benchmark/multiple_factorization/: ipc_benchmark.sh  mesh_smoothing_benchmark.sh  slim_benchmark.sh
scripts/benchmark/permutation_comparison/: Perm_comparison.sh  patch_ordering_ablation_study.sh  patch_ordering_eval.sh
scripts/benchmark/single_factorization/: laplace_benchmark.sh  tet_laplace_benchmark.sh  tri_laplace_benchmark.sh
src/AnalysisScripts/StaticSparsityRuntime/data/: runtime_data.csv
src/LinSysSolvers/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CUDSSSolver.cu  CUDSSSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  MKLSolver.cpp  MKLSolver.hpp  STRUMPACKSolver.cpp  STRUMPACKSolver.hpp
src/Ordering/: Untitled  metis_ordering.cpp  metis_ordering.h  neutral_ordering.cpp  neutral_ordering.h  ordering.cu  ordering.h  parth_ordering.cpp  parth_ordering.h  patch_ordering.cu  patch_ordering.h  rxmesh_ordering.cu  rxmesh_ordering.h
src/PatchOrdering/: cpu_ordering_with_patch.cpp  cpu_ordering_with_patch.h  gpu_ordering_with_patch.cu  gpu_ordering_with_patch.h
src/remesher/: collapse_edges.cpp  collapse_edges.h  eigen_compat.h  remesh_botsch.cpp  remesh_botsch.h  split_edges_until_bound.cpp
src/utils/: SPD_cot_matrix.h  compress_hessian.cpp  compress_hessian.h  csv_utils.h  get_factor_nnz.cpp  min_vertex_cover_bipartite.cpp  nvtx_helper.h  save_vector.h
tools/: CMakeLists.txt
tools/Remesher/: CMakeLists.txt  remesher.cpp
